ingress.yaml
# first install the nginx ingress controller on the AKS cluster then make the ingress file and apply it.
# access the app external_ip/main/demoapp/home and external_ip/shopping/demoappshop/home
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /main(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: deploy-service
            port:
              number: 8080 #30001
      - path: /shopping(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: deploy-service-shopping
            port:
              number: 8080 #30001
